# DRIMS2_docker_image

./: 01_build_image.sh  02_run_container.sh  Dockerfile  initial_commands
Projects/: camera_config.json
Projects/src/abb_wrapper/abb_wrapper_control/include/abb_wrapper_control/: TaskSequencer.h
Projects/src/abb_wrapper/abb_wrapper_control/src/: TaskSequencer.cpp
Projects/src/summer_school_demo/: CMakeLists.txt  package.xml
Projects/src/summer_school_demo/scripts/: calibration.py  image_reader.py
